# agentic_dev_cookie_cutter

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: CODER.md  REVIEWER.md  WORKFLOW.md  git-workflow.md
.claude/skills/coder/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/reviewer/: SKILL.md
src/myproject/: __init__.py
tests/: test_example.py
